discussion/kv_engine/182393/182393_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB: Add collection configured canDeduplicate to Item

Allow in-memory deduplication to be configured from a collection.

This patch hard codes the setting as false, a subsequent change will
allow for a manifest to set deduplication for scopes or collections.

Change-Id: I267954ac413524e24f6709d2cec651bbd1a33cdc

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-11-07 13:37:50.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-11-07 13:38:03.000000000
Message: 
Patch Set 1: Well-Formed-1

Branch restricted. PLEASE READ this URL: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/323504/artifact/restricted.html : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-11-07 13:40:46.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/529/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/529/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/381/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/381/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/393/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/393/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/414/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/414/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/416/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/416/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/393/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/393/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/406/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/406/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/406/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/406/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/633/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/633/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/391/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kv_bucket.cc:1837:56: error: non-const lvalue reference to type "Item" cannot bind to a value of unrelated type "time_t" (aka "long") [clang-diagnostic-error]
                cHandle.updateItemFromCollectionConfig(exptime, getMaxTtl()),
                                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/collections/vbucket_manifest_handles.h:465:47: note: passing argument to parameter "itm" here
    void updateItemFromCollectionConfig(Item& itm,
                                              ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/391/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kv_bucket.cc:1837:56:
error: non-const lvalue reference to type "Item" cannot bind to a value of unrelated type "time_t" (aka "long") [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/391/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20983/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
